syntax = "proto3";
package services;

option go_package = ".;services";

// UploadRequest
message UploadRequest {
    string val1 = 1;
}

// UploadResponse
message UploadResponse {
    string val2 = 1;
}

// MinionPipelineRequest
message MinionPipelineRequest {
    string pipeline = 1;
    string param1 = 2;
}

// MinionPipelineResponse
message MinionPipelineResponse {
    string val = 1;
}

// Herald service
service Herald {

    // SubmitUpload is an exposed function for the Upload service
    rpc SubmitUpload(UploadRequest) returns (UploadResponse) {}

    // SubmitMinionPipeline will submit a minion pipeline request to CLIMB
    rpc SubmitMinionPipeline(MinionPipelineRequest) returns (MinionPipelineResponse) {}
}
